@@ -80,7 +80,9 @@ class SmartyTests extends PHPUnit_Framework_TestSuite {
     public static function suite()
     {
         $testorder = array(
-            'PluginModifierCharsetTests', 
+            'PluginModifierCountWordsTests', 'PluginFunctionHtmlCheckboxesTests', 'PluginFunctionHtmlRadiosTests', 
+            // 'PluginModifierCapitalizeTests', 'PluginModifierCountCharactersTests', 'PluginModifierCountSentencesTests',
+            // 'PluginModifierSpacifyTests', 'PluginModifierStripTests', 'PluginModifierWordwrapTests',
         );
         $smarty_libs_dir = dirname(__FILE__) . '/../../distribution/libs';
         if (method_exists('PHPUnit_Util_Filter', $smarty_libs_dir)) {
