@@ -21,7 +21,7 @@
 function smarty_modifier_spacify($string, $spacify_char = ' ')
 {
     // well… what about charsets besides latin and UTF-8?
-    return implode($spacify_char, preg_split('//u', $string, -1, PREG_SPLIT_NO_EMPTY));
+    return implode($spacify_char, preg_split('//' . Smarty::$_UTF8_MODIFIER, $string, -1, PREG_SPLIT_NO_EMPTY));
 } 
 
 ?>
