@@ -21,9 +21,9 @@
 function smarty_modifiercompiler_count_words($params, $compiler)
 {
     if (Smarty::$_MBSTRING) {
-        // return 'preg_match_all(\'#[\w\pL]+#u\', ' . $params[0] . ', $tmp)';
+        // return 'preg_match_all(\'#[\w\pL]+#' . Smarty::$_UTF8_MODIFIER . '\', ' . $params[0] . ', $tmp)';
         // expression taken from http://de.php.net/manual/en/function.str-word-count.php#85592
-        return 'preg_match_all(\'/\p{L}[\p{L}\p{Mn}\p{Pd}\\\'\x{2019}]*/u\', ' . $params[0] . ', $tmp)';
+        return 'preg_match_all(\'/\p{L}[\p{L}\p{Mn}\p{Pd}\\\'\x{2019}]*/' . Smarty::$_UTF8_MODIFIER . '\', ' . $params[0] . ', $tmp)';
     }
     // no MBString fallback
     return 'str_word_count(' . $params[0] . ')';
