@@ -27,7 +27,7 @@ function smarty_modifiercompiler_strip($params, $compiler)
     if (!isset($params[1])) {
         $params[1] = "' '";
     }
-    return "preg_replace('!\s+!u', {$params[1]},{$params[0]})";
+    return "preg_replace('!\s+!" . Smarty::$_UTF8_MODIFIER . "', {$params[1]},{$params[0]})";
 }
 
 ?>
