@@ -5,6 +5,7 @@
 - changed unloadFilter() to not return a boolean in favor of chaining and API conformity
 - bugfix unregisterObject() raised notice when object to unregister did not exist
 - changed internals to use Smarty::$_MBSTRING ($_CHARSET, $_DATE_FORMAT) for better unit testing
+- added Smarty::$_UTF8_MODIFIER for proper PCRE charset handling (Forum Topic 20452)
 
 17.12.2011
 - improvement of compiling speed by new handling of plain text blocks in the lexer/parser (issue 68)
